--- a/augoor-next-js/package.json
+++ b/augoor-next-js/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@adobe/react-spectrum": "^3.33.0",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.1",
+    "@spectrum-icons/workflow": "^4.2.8",
+    "material-symbols": "^0.14.3",
+    "next": "14.0.4",
+    "primeicons": "^6.0.1",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "react-aria": "^3.31.0",
+    "react-dom": "^18"
   }
 }
