Ag-gtid-data-tables-examples

--- a/augoor-next-js/package.json
+++ b/augoor-next-js/package.json
@@ -10,11 +10,20 @@
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.33.0",
+    "@ag-grid-community/client-side-row-model": "^31.0.1",
+    "@ag-grid-community/react": "^31.0.1",
+    "@ag-grid-community/styles": "^31.0.1",
+    "@ag-grid-enterprise/column-tool-panel": "^31.0.1",
+    "@ag-grid-enterprise/core": "^31.0.1",
+    "@ag-grid-enterprise/menu": "^31.0.1",
+    "@ag-grid-enterprise/row-grouping": "^31.0.1",
+    "@ag-grid-enterprise/set-filter": "^31.0.1",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.1",
     "@spectrum-icons/workflow": "^4.2.8",
+    "ag-grid-react": "^31.0.1",
     "material-symbols": "^0.14.3",
     "next": "14.0.4",
     "primeicons": "^6.0.1",
